Fix issue with header/nav z-indexes

--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -1,5 +1,6 @@
 .header {
 	position: relative;
+	z-index: 9000;
 	transition: transform .5s cubic-bezier(.770, 0, .175, 1);
 	&--sticky {
 		position: fixed;
@@ -26,11 +27,15 @@
 			margin-bottom: -1px;
 			border-bottom: 4px solid palette(brand, primary);
 		}
+		@include mq(tos, true) {
+			padding-right: 20px;
+			padding-left: 20px;
+		}
 	}
 	&__bar {
 		@include clearfix;
 		position: relative;
-		z-index: 2;
+		z-index: 9002;
 		border-bottom: 1px solid palette(shade, lightest);
 		background-color: palette(shade, white);
 	}
@@ -39,11 +44,13 @@
 		top: 100%;
 		right: 0;
 		left: 0;
+		z-index: 9001;
 		@include mq(tng, true) {
 			display: inline-block;
+			margin-right: 10px;
 			top: 0;
 			left: auto;
-			z-index: 3;
+			z-index: 9003;
 		}
 	}
 }
